# lp21_parser

./: LICENSE  README.md  pyproject.toml
lp21_pyparser/: Parser.py  _helper_func.py  pyproject.toml
lp21_pyparser/lp21_pyparser/: Parser.py  parse_test.py
lp21_pyparser/tests/: test_lp21_pyparser.py
