[tool.poetry]
name = "lp21_pyparser"
version = "0.1.0"
description = ""
authors = ["Marco Wirthin <marco.wirthlin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
bs4 = "^0.0.1"
pandas = "^1.3.4"
lxml = "^4.6.4"
rich = "^10.15.1"
numpy = "^1.21.4"
googletrans = "^3.1.0a0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = {version = "^21.11b1", allow-prereleases = true}
mypy = "^0.910"
jedi = "^0.18.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
