[tool.poetry]
name = "lp21_pyparser"
version = "0.1.0"
description = ""
authors = ["Marco Wirthin <marco.wirthlin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.3.4"
mypy = "^0.910"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
